# CardputerZero-AppBuilder

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  czdev  index.html  package-lock.json  package.json
.github/workflows/: build-deb.yml  build-debs.yml  build-tauri.yml  desktop-smoke.yml  publish-image.yml  release-czdev.yml
apps/applaunch/: README.md  app-builder.json
crates/czdev/: Cargo.toml
crates/czdev/locales/: en.yml  zh-CN.yml  zh-TW.yml
crates/czdev/src/: auth.rs  build.rs  bump.rs  deploy.rs  doctor.rs  github.rs  i18n.rs  list.rs  main.rs  manifest.rs  paths.rs  publish.rs  run.rs  unpublish.rs  watch.rs
docker/: Dockerfile
docs/: APP_BUILDER_JSON.md  DESKTOP_DEV.md  EMULATOR.md  QUICKSTART.md  QUICKSTART_JA.md  QUICKSTART_ZH.md  architecture.md  arduino-app-lab-analysis.md
examples/Demo_2048/: Makefile  README.md  demo2048  main.c
examples/Demo_2048/packaging/: meta.env  stage.sh
examples/Demo_Clock/: Makefile  README.md  clock  main.c
examples/Demo_Clock/packaging/: meta.env  stage.sh
examples/Demo_ImageViewer/: README.md  viewer.py
examples/Demo_ImageViewer/packaging/: build.sh  meta.env  postinst  stage.sh
examples/Demo_MarkdownReader/: README.md  reader.py  sample.md
examples/Demo_MarkdownReader/packaging/: build.sh  meta.env  stage.sh
examples/Demo_Matrix/: Makefile  README.md  main.c  matrix
examples/Demo_Matrix/packaging/: meta.env  stage.sh
examples/Demo_MusicSpectrum/: Makefile  README.md  font8x8_basic.h  skeleton.c  spectrum
examples/Demo_MusicSpectrum/packaging/: ci-deps.sh  meta.env  stage.sh
examples/Demo_SysDashboard/: README.md  dashboard.py
examples/Demo_SysDashboard/packaging/: build.sh  meta.env  stage.sh
examples/Demo_WifiScan/: README.md  scan.py
examples/Demo_WifiScan/packaging/: build.sh  meta.env  stage.sh
examples/FrameBuffer_Game/: Makefile  README.md  input.c  input.h  main.c  snake_fb
examples/FrameBuffer_Game/packaging/: meta.env  stage.sh
examples/FrameBuffer_HelloWorld/: Makefile  README.md  font8x8_basic.h  hello_fb  main.c
examples/FrameBuffer_HelloWorld/packaging/: meta.env  stage.sh
examples/Game_Asteroids/: Makefile  README.md  asteroids  main.c
examples/Game_Asteroids/packaging/: meta.env  stage.sh
examples/Game_Flappy/: Makefile  README.md  fb.c  flappy  font8x8.h  main.c
examples/Game_Flappy/packaging/: meta.env  stage.sh
examples/Game_Invaders/: Makefile  README.md  invaders  main.c
examples/Game_Invaders/packaging/: ci-deps.sh  meta.env  stage.sh
examples/Game_LunarLander/: Makefile  README.md  input.h  lander  main.c
examples/Game_LunarLander/packaging/: meta.env  stage.sh
examples/Game_Minesweeper/: Makefile  README.md  input.c  input.h  main.c  minesweeper
examples/Game_Minesweeper/packaging/: meta.env  stage.sh
examples/Game_Pong/: Makefile  README.md  fb.h  input.c  main.c  pong
examples/Game_Pong/packaging/: meta.env  stage.sh
examples/Game_Sokoban/: Makefile  README.md  input.c  input.h  main.c  sokoban
examples/Game_Sokoban/packaging/: meta.env  stage.sh
examples/Game_Tetris/: Makefile  README.md  input.c  input.h  main.c  tetris
examples/Game_Tetris/packaging/: meta.env  stage.sh
examples/Game_TicTacToe/: Makefile  README.md  main.c  tictactoe
examples/Game_TicTacToe/packaging/: meta.env  stage.sh
examples/LVGL_HelloWorld/: .gitignore  CMakeLists.txt  README.md  lv_conf.h
examples/LVGL_HelloWorld/packaging/: ci-deps.sh  meta.env  stage.sh
examples/LVGL_HelloWorld/src/: main.c
examples/NES_Emulator/: CMakeLists.txt  README.md
examples/NES_Emulator/packaging/: app.desktop.in  build.sh  ci-deps.sh  meta.env  stage.sh
examples/NES_Emulator/roms/: README.md
examples/NES_Emulator/src/: input.cpp  input.hpp  main.cpp  viewport.cpp  viewport.hpp
examples/PyQt5_HelloWorld/: README.md  hello.py  run.sh
examples/PyQt5_HelloWorld/packaging/: build.sh  meta.env  postinst  stage.sh
examples/Python_FrameBuffer_HelloWorld/: README.md  fb_hello.py  requirements.txt  run.sh
examples/Python_FrameBuffer_HelloWorld/packaging/: build.sh  meta.env  stage.sh
examples/Python_Tkinter_HelloWorld/: README.md  fb_blit.py  hello_tk.py  run_self_mirror.sh  run_xvfb.sh
examples/Python_Tkinter_HelloWorld/packaging/: build.sh  meta.env  stage.sh
examples/Qt_HelloWorld/: .gitignore  CMakeLists.txt  README.md  hello.pro  main.cpp
examples/Qt_HelloWorld/packaging/: ci-deps.sh  meta.env  stage.sh
examples/Rust_FrameBuffer_HelloWorld/: Cargo.toml  README.md
examples/Rust_FrameBuffer_HelloWorld/packaging/: meta.env  stage.sh
examples/Rust_FrameBuffer_HelloWorld/src/: main.rs
examples/SDL2_Game/: Makefile  README.md  breakout  game.c  game.h  main.c  render.c  render.h
examples/SDL2_Game/assets/: README_ASSETS.md
examples/SDL2_Game/packaging/: ci-deps.sh  meta.env  stage.sh
examples/SDL2_HelloWorld/: Makefile  README.md  hello_sdl2  main.c
examples/SDL2_HelloWorld/packaging/: meta.env  stage.sh
examples/hello_cz/: CMakeLists.txt  app-builder.json
examples/hello_cz/src/: hello_cz.c
examples/key_echo/: CMakeLists.txt  app-builder.json
examples/key_echo/src/: main.c
examples/lvgl_music/: CMakeLists.txt  app-builder.json
examples/lvgl_music/src/: main.c
examples/lvgl_widgets/: CMakeLists.txt  app-builder.json
examples/lvgl_widgets/src/: main.c
scripts/: _template_desktop.in  deploy.sh  discover_projects.py  gen-icons.py  pack-all.sh  pack-deb.sh  pack_deb.py
scripts/czdev/: __main__.py  auth.py  bump.py  github_client.py  publish.py  unpublish.py
scripts/dev-on-mac/: Dockerfile.ubuntu  README.md  entrypoint.sh  run-in-docker.sh  run-sdl.sh  setup-docker.sh  smoke-deb.sh
sdk/: README.md
sdk/cmake/: CZApp.cmake
sdk/include/: cz_app.h  lv_conf.h
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: build_mgr.rs  docker_mgr.rs  lib.rs
src/components/: BuildPanel.tsx  DebugPanel.tsx  DockerSetup.tsx  EmulatorPanel.tsx  FlashPanel.tsx  Sidebar.tsx  TerminalOutput.tsx
