[package]
name = "czdev"
version = "0.1.0"
description = "CardputerZero desktop dev CLI: build / run / watch / deploy LVGL apps"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "czdev"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
