[package]
name = "czdev"
version = "0.1.0"
description = "CardputerZero desktop dev CLI: build / run / watch / deploy LVGL apps"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "czdev"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "socks", "system-proxy"], default-features = false }
base64 = "0.22"
sha2 = "0.10"
dirs = "5"
open = "5"
rust-i18n = "3"
sys-locale = "0.3"
